lang/test/testdata/errors/unknown_field.scampi
import "std"

std.pkg { packages = ["nginx"], source = std.system {}, bogus = "oops" }
